syntax = "proto3";
import "google/protobuf/empty.proto";
option go_package = "./;proto";

service User {
  rpc GetUserList(PageInfo) returns (UserListResponse); // 获取用户列表
  rpc GetUserByMobile(MobileRequest) returns (userInfoResponse); // 根据手机号获取用户信息
  rpc GetUserById(IdRequest) returns (userInfoResponse); // 根据用户id获取用户信息
  rpc CreateUser(CreateUserInfo) returns (userInfoResponse); // 创建用户
  rpc UpdateUser(UpdateUserInfo) returns (google.protobuf.Empty); // 更新用户
  rpc CheckUserPassword(CheckPasswordInfo) returns (CheckResponse); // 校验用户密码
}

message CheckPasswordInfo {
  string password = 1;
  string encryptedPassword = 2;
}

message CheckResponse {
  bool success = 1;
}

message PageInfo {
  uint32 pn = 1;
  uint32 pageSize = 2;
}

message MobileRequest {
  string mobile = 1;
}

message IdRequest {
  int32 id = 1;
}

message CreateUserInfo {
  string nikeName = 1;
  string password = 2;
  string mobile = 3;
}

message UpdateUserInfo {
  int32 id = 1;
  string nikeName = 2;
  string gender = 3;
  uint64 birthday = 4;
}

message userInfoResponse {
  int32 id = 1;
  string password = 2;
  string mobile = 3;
  string nikeName = 4;
  uint64 birthday = 5;
  string gender = 6;
  int32 role = 7;
}

message UserListResponse {
  int32 total = 1;
  repeated userInfoResponse items = 2;
}

